--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="login">Login</string>
     <string name="admin_login">Admin Login</string>
     <string name="loading">Loading...</string>
+    <string name="category_name">Category Name</string>
+    <string name="add">Add</string>
 </resources>
