--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="loading">Loading...</string>
     <string name="category_name">Category Name</string>
     <string name="add">Add</string>
+    <string name="update">UPDATE</string>
 </resources>
