Updating dialog layouts by adding options for category description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="category_name">Category Name</string>
     <string name="add">Add</string>
     <string name="update">UPDATE</string>
+    <string name="category_description">Category Description</string>
 </resources>
